force-app/main/default/objects/Document_Checklist__c/Document_Checklist__c.object-meta.xml
<CustomObject>
    <label>Document Checklist</label>
    <nameField>
        <displayFormat>DC-{00000}</displayFormat>
        <label>Checklist Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>