force-app/main/default/objects/Document_Checklist__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Document Checklist</relationshipLabel>
    <relationshipName>Document_Checklist</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>