force-app/main/default/objects/Document_Checklist__c/fields/Document_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_File_Id__c</fullName>
    <label>Document File Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>