force-app/main/default/objects/Document_Checklist__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>PAN</fullName><default>false</default><label>PAN</label></value>
            <value><fullName>Aadhaar-masked</fullName><default>false</default><label>Aadhaar-masked</label></value>
            <value><fullName>Address Proof</fullName><default>false</default><label>Address Proof</label></value>
            <value><fullName>Bank Statement</fullName><default>false</default><label>Bank Statement</label></value>
            <value><fullName>Income Proof</fullName><default>false</default><label>Income Proof</label></value>
            <value><fullName>Passport (NRI)</fullName><default>false</default><label>Passport (NRI)</label></value>
            <value><fullName>Form 15CA</fullName><default>false</default><label>Form 15CA</label></value>
            <value><fullName>Photograph</fullName><default>false</default><label>Photograph</label></value>
            <value><fullName>Signature</fullName><default>false</default><label>Signature</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>