force-app/main/default/objects/Document_Checklist__c/fields/Required_For__c.field-meta.xml
<CustomField>
    <fullName>Required_For__c</fullName>
    <label>Required For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Primary Buyer</fullName><default>true</default><label>Primary Buyer</label></value>
            <value><fullName>All Co-Buyers</fullName><default>false</default><label>All Co-Buyers</label></value>
            <value><fullName>NRI Only</fullName><default>false</default><label>NRI Only</label></value>
            <value><fullName>Corporate Only</fullName><default>false</default><label>Corporate Only</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>