force-app/main/default/objects/Document_Checklist__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Received</fullName><default>false</default><label>Received</label></value>
            <value><fullName>Verified</fullName><default>false</default><label>Verified</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Waived</fullName><default>false</default><label>Waived</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>